--- a/index.html
+++ b/index.html
@@ -10,140 +10,93 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://gluestickent.com">
 <meta property="og:image" content="http://gluestickent.com/img/gluestick-og.jpg">
-<style>
-    html {
-        height: 100%;
-    }
-    body {
-        display: block;
-        font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-        color: #000;
-        line-height: 1.8;
-        background: #D5D7FE;
-        background-image: url("img/gluestick-45.png");
-        background-size: 14vh;
-        height: 100%;
-        margin: 0;
-    }
-    .wrapper {
-        display: flex;
-        flex-flow: wrap;
-        padding: 0;
-        }
-    .video, .card {
-        margin: 1.5rem;
-        box-shadow: -8px 8px;
-        border: 2px solid #000;
-    }
-    .card {
-        margin-top: 0;
-        padding: 1rem;
-        background-color: #ffb9c3;
-    }
-    div {   
-        display: block;
-    }
-    .section {
-        display: block;
-        margin-top: 1rem;
-        min-width: 120px;
-        text-align: center;
-    }
-    .video {
-        flex-grow: 2;
-        min-height: 40vh;
-    }
-    h2 {
-        font-size: 1.2rem;
-        font-weight: 800;
-        line-height: 1.5;
-    }
-    a {
-        text-decoration:none;
-    }
-    #social img {
-        width: 32px;
-        border-radius: 8px;
-        margin: 0.5rem;
-    }
-    #logo {
-        width: 75%;
-        max-width: 300px;
-    }
-    input, textarea {
-        display:block;
-        width: 100%;
-        border-radius: 0px;
-        margin-bottom: 1rem;
-        border: 2px solid #000;
-        padding: 0.5rem;
-        font-size: 0.8rem;
-        box-shadow: inset -2px 2px #aaa;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
-    }
-    textarea {
-        height: 96px;
-    }
-    #submit {
-        background-color:#f6fb1d;
-        box-shadow: -4px 4px #000000;
-        font-weight: 800;
-        margin-left: 4px;
-        cursor:pointer;
-        -webkit-appearance: none;
-    }
-    @media (min-width: 768px) {
-        .video, .card {
-            margin: 2rem;
-        }
-        .wrapper {
-            padding: 4vh 8vw 0;
-        }
-        .card {
-            padding: 2rem;
-        }
-        input, textarea {
-            font-size: 1rem;
-            padding: 1rem;
-        }
-    }
-    @media (max-width: 1200px) {
-        .card {
-            width: 100%;
-        }
-    }
-</style>
+<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+<script type="text/javascript">
+   function toggle_visibility(id) {
+       var e = document.getElementById(id);
+       if(e.style.display == 'block')
+          e.style.display = 'none';
+       else
+          e.style.display = 'block';
+   }
+</script>
 </head>
 <body>
-    <div class="wrapper">
-        <iframe class="video" src="https://www.youtube.com/embed/vXtQ_0r1Xxc?rel=0&amp;autoplay=1&amp;loop=1&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        <div class="card">
-            <div class="section">
-                <img src="img/gluestick-logo.png" id="logo">
+    <header>
+        <img src="img/gluestick-logo-s.png" style="height: 32px; width: auto;" />
+    </header>
+    <main>
+        <div class="feature">
+            <a href="https://www.ticketflap.com/gluestick-presents-moonchild" target="_blank">
+                <img src="img/gluestick-moonchild-sq.jpg" class="feature-1-1"/>
+            </a>
+        </div>
+        <!--
+        <div class="feature">
+            <a href="https://www.youtube.com/watch?v=vXtQ_0r1Xxc" target="_blank">
+                <img src="img/big-spoon-poppin.jpg" />
+            </a>
+        </div>
+        <div id="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vXtQ_0r1Xxc?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        -->      
+    </main>
+    <footer>
+        <div class="flex">
+            <div id="about">
+                <h2>About</h2>
+                <p>Gluestick is a events, talent and promotions agency aiming to bring the best of music and Internet culture to Hong Kong. Our main focus is contemporary hip-hop/rap and R&B, but we also shine the spotlight on other buzzworthy genres like electronic, indie and alternative acts. We want our contributions to make Hong Kong a more fun and culturally-aware city.</p>
             </div>
-            <div class="section">
-                <h2>contact us</h2>
+            <div id="contact">
+                <h2>Contact us</h2>
                 <form action="https://formspree.io/info@gluestickent.com"
                       method="POST">
-                    <input type="text" name="name" placeholder="your name">
-                    <input type="email" name="_replyto" placeholder="your email">
-                    <textarea name="message" placeholder="your message"></textarea>
-                    <input type="submit" value="send" id="submit">
+                    <input type="text" name="name" placeholder="Your name">
+                    <input type="email" name="_replyto" placeholder="Your email">
+                    <textarea name="message" placeholder="Your message"></textarea>
+                    <input type="submit" value="Send" id="submit">
                 </form>
             </div>
-            <div class="section" id="social">
-                <a href="https://www.facebook.com/gluestickent/" target="_blank">
-                    <img src="img/fb.png">
-                </a>
-                <a href="https://www.instagram.com/gluestickent/" target="_blank">
-                    <img src="img/ig.png">
-                </a>
-                <a href="https://twitter.com/gluestickent" target="_blank">
-                    <img src="img/twitter.png">
-                </a>
+        </div>
+        <div id="social">
+            <a href="https://www.facebook.com/gluestickent/" target="_blank">
+                <img src="img/fb.png">
+            </a>
+            <a href="https://www.instagram.com/gluestickent/" target="_blank">
+                <img src="img/ig.png">
+            </a>
+            <a href="https://twitter.com/gluestickent" target="_blank">
+                <img src="img/twitter.png">
+            </a>
+            <a href="https://www.youtube.com/channel/UCeYq0JU3GsZDOV6ozxCl08Q" target="_blank">
+                <img src="img/youtube.png">
+            </a>
+        </div>
+        <div id="copyright">
+            <span>© gluestickent 2018</span>
+        </div>
+    </footer>
+    <div id="footer-popup" style="display:block;">
+        <button onclick="toggle_visibility('footer-popup');" id="close">×</button>
+        <h3>Sign up to our mailing list</h3>
+        <!-- Begin MailChimp Signup Form -->
+        <div id="mc_embed_signup">
+        <form action="https://gluestickent.us12.list-manage.com/subscribe/post?u=c360dc8b3ae17cdd220e17bfd&amp;id=fde02b09d3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+            
+        <div class="mc-field-group">
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
+        </div>
+            <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c360dc8b3ae17cdd220e17bfd_fde02b09d3" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
-        </div>                      
-    </div>         
+        </form>
+        </div>
+        <!--End mc_embed_signup-->
+    </div>
 </body>
