--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="flex">
             <div id="about">
                 <h2>About</h2>
-                <p>Gluestick is a events, talent and promotions agency aiming to bring the best of music and Internet culture to Hong Kong. Our main focus is contemporary hip-hop/rap and R&B, but we also shine the spotlight on other buzzworthy genres like electronic, indie and alternative acts. We want our contributions to make Hong Kong a more fun and culturally-aware city.</p>
+                <p>Gluestick is a events, talent and promotions agency aiming to bring the best of music and Internet culture to Hong Kong. Our main focus is contemporary hip-hop/rap and R&B, but we also shine the spotlight on other buzzworthy genres like electronic, indie and alternative acts. We hope to bring some cool stuff to Hong Kong's music scene and culture.</p>
             </div>
             <div id="contact">
                 <h2>Contact us</h2>
