--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
     <main>
         <div class="feature">
-            <a href="https://www.ticketflap.com/gluestick-presents-moonchild" target="_blank">
-                <img src="img/gluestick-moonchild-sq.jpg" class="feature-1-1"/>
+            <a href="#" target="_blank">
+                <img src="img/phum-viphurit-mellow-fellow-poster-final.jpg" class="feature-1-1"/>
             </a>
         </div>
         <!--
