styling portrait feature

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     </header>
     <main>
         <div class="feature">
-            <a href="#" target="_blank">
-                <img src="img/phum-viphurit-mellow-fellow-poster-final.jpg" class="feature-1-1"/>
-            </a>
+            <img src="img/phum-viphurit-mellow-fellow-poster-final.jpg" class="feature-portrait"/>
         </div>
         <!--
         <div class="feature">
