--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header>
-        <img src="img/gluestick-logo-s.png" style="height: 32px; width: auto;" />
+        <img src="img/gluestick.png" style="height: 40px; width: auto;" />
     </header>
     <main>
         <div class="feature">
