--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <a href="http://gluestickent.com"><img src="../img/gluestick-logo-s.png" style="height: 32px; width: auto;" /></a>
+        <a href="http://gluestickent.com"><img src="../img/gluestick.png" style="height: 40px; width: auto;" /></a>
     </header>
     <main>
         <div id="thankyou">
