--- a/index.html
+++ b/index.html
@@ -22,24 +22,21 @@
 </script>
 </head>
 <body>
+    <!-- Begin header -->
     <header>
         <img src="img/gluestick.png" style="height: 40px; width: auto;" />
     </header>
+    <!-- End header -->
+
+    <!-- Begin content -->
     <main>
         <div class="feature">
-            <img src="img/phum-viphurit-mellow-fellow-poster-final.jpg" class="feature-portrait"/>
-        </div>
-        <!--
-        <div class="feature">
-            <a href="https://www.youtube.com/watch?v=vXtQ_0r1Xxc" target="_blank">
-                <img src="img/big-spoon-poppin.jpg" />
-            </a>
-        </div>
-        <div id="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vXtQ_0r1Xxc?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        -->      
+            <img src="img/phum-viphurit-mellow-fellow-poster-final.jpg" class="feature-portrait" alt="gluestick presents Phum Viphurit and Mellow Fellow Live in Hong Kong. August 4, 2018 8:30 to 11:30 PM at this town needs, 1/F, Ocean One, 6 Shung Shun Street, Yau Tong. Early bird $280, Advance $340, Door $380. Ticketflap x gluestick entertainment." />
+        </div>    
     </main>
+    <!-- End content -->
+
+    <!-- Begin footer -->
     <footer>
         <div class="flex">
             <div id="about">
@@ -75,6 +72,9 @@
             <span>© gluestickent 2018</span>
         </div>
     </footer>
+    <!-- End footer -->
+
+    <!-- Begin footer popup -->
     <div id="footer-popup" style="display:block;">
         <button onclick="toggle_visibility('footer-popup');" id="close">×</button>
         <h3>Sign up to our mailing list</h3>
@@ -82,7 +82,6 @@
         <div id="mc_embed_signup">
         <form action="https://gluestickent.us12.list-manage.com/subscribe/post?u=c360dc8b3ae17cdd220e17bfd&amp;id=fde02b09d3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-            
         <div class="mc-field-group">
             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
         </div>
@@ -97,4 +96,5 @@
         </div>
         <!--End mc_embed_signup-->
     </div>
+    <!-- End footer popup -->
 </body>
