Added ticketflap link

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
     <!-- Begin content -->
     <main>
         <div class="feature">
-            <img src="img/phum-viphurit-mellow-fellow-poster-final.jpg" class="feature-portrait" alt="gluestick presents Phum Viphurit and Mellow Fellow Live in Hong Kong. August 4, 2018 8:30 to 11:30 PM at this town needs, 1/F, Ocean One, 6 Shung Shun Street, Yau Tong. Early bird $280, Advance $340, Door $380. Ticketflap x gluestick entertainment." />
-        </div>    
+            <a href="https://www.ticketflap.com/phum-viphurit-mellow-fellow-gluestick" target="_blank">
+                <img src="img/phum-viphurit-mellow-fellow-poster-final.jpg" class="feature-portrait" alt="gluestick presents Phum Viphurit and Mellow Fellow Live in Hong Kong. August 4, 2018 8:30 to 11:30 PM at this town needs, 1/F, Ocean One, 6 Shung Shun Street, Yau Tong. Early bird $280, Advance $340, Door $380. Ticketflap x gluestick entertainment." />
+            </a>
+        </div>
     </main>
     <!-- End content -->
 
