--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- Begin content -->
     <main>
         <div class="feature">
-            <a href="https://www.ticketflap.com/gluestick-snail-mail-eevee-hong-kong-2018" target="_blank">
-                <img src="img/snail-mail-eevee-poster.jpg" class="feature-portrait" alt="gluestick presents Snail Mail and eevee Live in Hong Kong. October 10, 2018 7:30 to 11:30 PM at this town needs, 1/F, Ocean One, 6 Shung Shun Street, Yau Tong. Early bird $280, Advance $340, Door $380. Ticketflap x gluestick entertainment." />
+            <a href="https://www.ticketflap.com/gluestick-denzel-curry-hong-kong" target="_blank">
+                <img src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/48422776_797192567290057_3453720491343216640_o.jpg?_nc_cat=103&_nc_ht=scontent-hkg3-1.xx&oh=edd16b44570de043a728ada1c7af17e1&oe=5C91A572" class="feature-portrait" alt="Gluestick Presents: Denzel Curry Live in Hong Kong. Thursday, January 24, 2019 at 7:30 PM – 11 PM. This Town Needs. Early bird $300, Advance $380, Door $420" />
             </a>
         </div>
     </main>
