--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <div class="feature">
             <a href="https://www.ticketflap.com/gluestick-denzel-curry-hong-kong" target="_blank">
-                <img src="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/48422776_797192567290057_3453720491343216640_o.jpg?_nc_cat=103&_nc_ht=scontent-hkg3-1.xx&oh=edd16b44570de043a728ada1c7af17e1&oe=5C91A572" class="feature-portrait" alt="Gluestick Presents: Denzel Curry Live in Hong Kong. Thursday, January 24, 2019 at 7:30 PM – 11 PM. This Town Needs. Early bird $300, Advance $380, Door $420" />
+                <img src="https://ticketflap-prod-web-files.s3.amazonaws.com/media/uploads/images/b1f3b04834427df3.jpg" class="feature-portrait" alt="Gluestick Presents: Denzel Curry Live in Hong Kong. Thursday, January 24, 2019 at 7:30 PM – 11 PM. This Town Needs. Early bird $300, Advance $380, Door $420" />
             </a>
         </div>
     </main>
