--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -4,9 +4,9 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<meta name="description" content="#">
-<title>gluestick</title>
-<meta property="og:title" content="gluestick">
+<meta name="description" content="Gluestick is a events, talent and promotions agency aiming to bring the best of music and Internet culture to Hong Kong.">
+<title>gluestick - Music curator & show organizer based in Hong Kong</title>
+<meta property="og:title" content="gluestick - Music curator & show organizer based in Hong Kong">
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://gluestickent.com">
 <meta property="og:image" content="http://gluestickent.com/img/gluestick-og.jpg">
@@ -40,7 +40,7 @@
             </a>
         </div>
         <div id="copyright">
-            <span>© gluestickent 2018</span>
+            <span>© gluestickent 2019</span>
         </div>
     </footer>
 </body>
