--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@
 <body>
     <!-- Begin header -->
     <header>
+        <!-- Hide the ting fam
         <img src="img/gluestick.png" style="height: 40px; width: auto;" />
+        -->
     </header>
     <!-- End header -->
 
     <!-- Begin content -->
     <main>
-        <div class="feature">
-            <a href="https://www.ticketflap.com/gluestick-denzel-curry-hong-kong" target="_blank">
-                <img src="https://ticketflap-prod-web-files.s3.amazonaws.com/media/uploads/images/b1f3b04834427df3.jpg" class="feature-portrait" alt="Gluestick Presents: Denzel Curry Live in Hong Kong. Thursday, January 24, 2019 at 7:30 PM – 11 PM. This Town Needs. Early bird $300, Advance $380, Door $420" />
+        <div class="feature feature-portrait">
+            <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong" target="_blank">
+                <img src="https://ticketflap-prod-web-files.s3.amazonaws.com/media/uploads/images/ff9a1c45809fd010.jpg" alt="Gluestick Presents: GLUESTICK FEST Phum Viphurit | Sunset Rollercoaster | ØZI and More" />
             </a>
+            <p>Limited amount of early bird tickets for Gluestick Fest 2019 (Phum Viphurit, ØZI, Sunset Rollercoaster) will be on sale Thursday, February 14 (Valentine's Day) at 12PM. Don't miss out and let your loved ones know! 💖</p>
+            <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong"><button class="button-primary">Get tickets</button></a>
         </div>
     </main>
     <!-- End content -->
