Gluestick Fest copy

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
     <!-- Begin content -->
     <main>
         <div class="feature feature-portrait">
-            <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong" target="_blank">
+            <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong">
                 <img src="https://ticketflap-prod-web-files.s3.amazonaws.com/media/uploads/images/ff9a1c45809fd010.jpg" alt="Gluestick Presents: GLUESTICK FEST Phum Viphurit | Sunset Rollercoaster | ØZI and More" />
             </a>
-            <p>Limited amount of early bird tickets for Gluestick Fest 2019 (Phum Viphurit, ØZI, Sunset Rollercoaster) will be on sale Thursday, February 14 (Valentine's Day) at 12PM. Don't miss out and let your loved ones know! 💖</p>
+            <h1>Gluestick Fest 2019</h1>
+            <p>Phum Viphurit, ØZI, Sunset Rollercoaster and more<br>Sunday, May 12, 2019<br>Rotunda 3, 6/F, KITEC, 1 Trademart Drive, Kowloon Bay</p>
             <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong"><button class="button-primary">Get tickets</button></a>
         </div>
     </main>
