--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <main>
         <div class="feature feature-portrait">
             <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong">
-                <img src="https://ticketflap-prod-web-files.s3.amazonaws.com/media/uploads/images/ff9a1c45809fd010.jpg" alt="Gluestick Presents: GLUESTICK FEST Phum Viphurit | Sunset Rollercoaster | ØZI and More" />
+                <img src="https://i.imgur.com/XVqhsPu.jpg" alt="GLUESTICK FEST: Kero Kero Bonito, Phum Viphurit, Sunset Rollercoaster, ØZI and More" />
             </a>
             <h1>Gluestick Fest 2019</h1>
-            <p>Phum Viphurit, ØZI, Sunset Rollercoaster and more<br>Sunday, May 12, 2019<br>Rotunda 3, 6/F, KITEC, 1 Trademart Drive, Kowloon Bay</p>
+            <p>Kero Kero Bonito, Phum Viphurit, Sunset Rollercoaster, ØZI and More<br>Sunday, May 12, 2019<br>Rotunda 3, 6/F, KITEC, 1 Trademart Drive, Kowloon Bay</p>
             <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong"><button class="button-primary">Get tickets</button></a>
         </div>
     </main>
