--- a/index.html
+++ b/index.html
@@ -24,21 +24,17 @@
 <body>
     <!-- Begin header -->
     <header>
-        <!-- Hide the ting fam
         <img src="img/gluestick.png" style="height: 40px; width: auto;" />
-        -->
     </header>
     <!-- End header -->
 
     <!-- Begin content -->
     <main>
-        <div class="feature feature-portrait">
-            <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong">
-                <img src="https://i.imgur.com/XVqhsPu.jpg" alt="GLUESTICK FEST: Kero Kero Bonito, Phum Viphurit, Sunset Rollercoaster, ØZI and More" />
+        <div class="feature">
+            <a href="https://www.facebook.com/events/435535020371495/">
+                <img src="https://instagram.fhkg3-2.fna.fbcdn.net/vp/4a0ab1848dcbb33c73fec29626864c1e/5DEE3AEB/t51.2885-15/sh0.08/e35/s750x750/66475419_165868034575246_6973733056428849833_n.jpg?_nc_ht=instagram.fhkg3-2.fna.fbcdn.net" />
+                <!-- <button class="button-primary">Get tickets</button></a> -->
             </a>
-            <h1>Gluestick Fest 2019</h1>
-            <p>Kero Kero Bonito, Phum Viphurit, Sunset Rollercoaster, ØZI and More<br>Sunday, May 12, 2019<br>Rotunda 3, 6/F, KITEC, 1 Trademart Drive, Kowloon Bay</p>
-            <a href="https://www.ticketflap.com/gluestick-fest-2019-phum-viphurit-sunset-rollercoaster-ozi-hong-kong"><button class="button-primary">Get tickets</button></a>
         </div>
     </main>
     <!-- End content -->
