--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <!-- <button class="button-primary">Get tickets</button></a> -->
             </a>
         </div>
+        <iframe src="https://open.spotify.com/embed/playlist/69EbutviEzTEgBkwVtOUxO" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </main>
     <!-- End content -->
 
