--- a/index.html
+++ b/index.html
@@ -22,58 +22,64 @@
 </script>
 </head>
 <body>
-    <!-- Begin header -->
-    <header>
-        <img src="img/gluestick.png" style="height: 40px; width: auto;" />
-    </header>
-    <!-- End header -->
+    <div class="hero">
+        <!-- Begin header -->
+        <!--
+        <header class="container">
+            <img src="img/gluestick.png" style="height: 40px; width: auto;" />
+        </header>
+    -->
+        <!-- End header -->
 
-    <!-- Begin content -->
-    <main>
-        <div class="feature">
-            <a href="https://www.facebook.com/events/435535020371495/">
-                <img src="https://instagram.fhkg3-2.fna.fbcdn.net/vp/4a0ab1848dcbb33c73fec29626864c1e/5DEE3AEB/t51.2885-15/sh0.08/e35/s750x750/66475419_165868034575246_6973733056428849833_n.jpg?_nc_ht=instagram.fhkg3-2.fna.fbcdn.net" />
-                <!-- <button class="button-primary">Get tickets</button></a> -->
-            </a>
-        </div>
-        <iframe src="https://open.spotify.com/embed/playlist/69EbutviEzTEgBkwVtOUxO" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    </main>
+        <!-- Begin content -->   
+        <div class="container">
+            <div class="feature">
+                <a href="https://www.facebook.com/events/435535020371495/">
+                    <img src="https://instagram.fhkg3-2.fna.fbcdn.net/vp/4a0ab1848dcbb33c73fec29626864c1e/5DEE3AEB/t51.2885-15/sh0.08/e35/s750x750/66475419_165868034575246_6973733056428849833_n.jpg?_nc_ht=instagram.fhkg3-2.fna.fbcdn.net" />
+                    <!-- <button class="button-primary">Get tickets</button></a> -->
+                </a>
+            </div>
+            <iframe style ="border: 2px solid #000" src="https://open.spotify.com/embed/playlist/69EbutviEzTEgBkwVtOUxO" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        </div>       
+    </div>
     <!-- End content -->
 
     <!-- Begin footer -->
     <footer>
-        <div class="flex">
-            <div id="about">
-                <h2>About</h2>
-                <p>Gluestick is a events, talent and promotions agency aiming to bring the best of music and Internet culture to Hong Kong. Our main focus is contemporary hip-hop/rap and R&B, but we also shine the spotlight on other buzzworthy genres like electronic, indie and alternative acts. We hope to bring some cool stuff to Hong Kong's music scene and culture.</p>
+        <div class="container">
+            <div class="flex">
+                <div id="about">
+                    <h2>About</h2>
+                    <p>Gluestick is a events, talent and promotions agency aiming to bring the best of music and Internet culture to Hong Kong. Our main focus is contemporary hip-hop/rap and R&B, but we also shine the spotlight on other buzzworthy genres like electronic, indie and alternative acts. We hope to bring some cool stuff to Hong Kong's music scene and culture.</p>
+                </div>
+                <div id="contact">
+                    <h2>Contact us</h2>
+                    <form action="https://formspree.io/info@gluestickent.com"
+                          method="POST">
+                        <input type="text" name="name" placeholder="Your name">
+                        <input type="email" name="_replyto" placeholder="Your email">
+                        <textarea name="message" placeholder="Your message"></textarea>
+                        <input type="submit" value="Send" id="submit">
+                    </form>
+                </div>
             </div>
-            <div id="contact">
-                <h2>Contact us</h2>
-                <form action="https://formspree.io/info@gluestickent.com"
-                      method="POST">
-                    <input type="text" name="name" placeholder="Your name">
-                    <input type="email" name="_replyto" placeholder="Your email">
-                    <textarea name="message" placeholder="Your message"></textarea>
-                    <input type="submit" value="Send" id="submit">
-                </form>
+            <div id="social">
+                <a href="https://www.facebook.com/gluestickent/" target="_blank">
+                    <img src="img/fb.png">
+                </a>
+                <a href="https://www.instagram.com/gluestickent/" target="_blank">
+                    <img src="img/ig.png">
+                </a>
+                <a href="https://twitter.com/gluestickent" target="_blank">
+                    <img src="img/twitter.png">
+                </a>
+                <a href="https://www.youtube.com/channel/UCeYq0JU3GsZDOV6ozxCl08Q" target="_blank">
+                    <img src="img/youtube.png">
+                </a>
             </div>
-        </div>
-        <div id="social">
-            <a href="https://www.facebook.com/gluestickent/" target="_blank">
-                <img src="img/fb.png">
-            </a>
-            <a href="https://www.instagram.com/gluestickent/" target="_blank">
-                <img src="img/ig.png">
-            </a>
-            <a href="https://twitter.com/gluestickent" target="_blank">
-                <img src="img/twitter.png">
-            </a>
-            <a href="https://www.youtube.com/channel/UCeYq0JU3GsZDOV6ozxCl08Q" target="_blank">
-                <img src="img/youtube.png">
-            </a>
-        </div>
-        <div id="copyright">
-            <span>© gluestickent 2019</span>
+            <div id="copyright">
+                <span>© gluestickent 2019</span>
+            </div>
         </div>
     </footer>
     <!-- End footer -->
