--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <!-- Begin content -->   
         <div class="container">
             <div class="feature">
-                <a href="https://www.facebook.com/events/435535020371495/">
+                <a href="https://bit.ly/madeintyohk">
                     <img src="https://instagram.fhkg3-2.fna.fbcdn.net/vp/4a0ab1848dcbb33c73fec29626864c1e/5DEE3AEB/t51.2885-15/sh0.08/e35/s750x750/66475419_165868034575246_6973733056428849833_n.jpg?_nc_ht=instagram.fhkg3-2.fna.fbcdn.net" />
-                    <!-- <button class="button-primary">Get tickets</button></a> -->
+                    <button class="button-primary">Get tickets</button></a>
                 </a>
             </div>
             <iframe style ="border: 2px solid #000" src="https://open.spotify.com/embed/playlist/69EbutviEzTEgBkwVtOUxO" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
