--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                 <a href="https://www.youtube.com/channel/UCeYq0JU3GsZDOV6ozxCl08Q" target="_blank">
                     <img src="img/youtube.png">
                 </a>
+                <a href="https://open.spotify.com/user/m3umgt1gxgez6snkrlcna0ox7" target="_blank">
+                    <img src="img/spotify.png">
+                </a>
             </div>
             <div id="copyright">
                 <span>© gluestickent 2019</span>
