--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
             <div class="feature">
                 <a href="https://bit.ly/madeintyohk">
                     <img src="https://instagram.fhkg3-2.fna.fbcdn.net/vp/4a0ab1848dcbb33c73fec29626864c1e/5DEE3AEB/t51.2885-15/sh0.08/e35/s750x750/66475419_165868034575246_6973733056428849833_n.jpg?_nc_ht=instagram.fhkg3-2.fna.fbcdn.net" />
-                    <button class="button-primary">Get tickets</button></a>
+                    <button class="button-primary">Get tickets</button>
+                </a>
+            </div>
+            <div class="feature">
+                <a href="https://www.facebook.com/events/376475979684832/">
+                    <img src="https://scontent-hkg3-2.cdninstagram.com/vp/4cdcddfa10ef56430fc2f9b6aa4db28d/5E12D30A/t51.2885-15/e35/69032287_2491395710940649_2848921925020992467_n.jpg?_nc_ht=scontent-hkg3-2.cdninstagram.com" />
+                    <!-- <button class="button-primary">Get tickets</button> -->
                 </a>
             </div>
             <iframe style ="border: 2px solid #000" src="https://open.spotify.com/embed/playlist/69EbutviEzTEgBkwVtOUxO" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
