--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 </a>
             </div>
             <div class="feature">
-                <a href="https://www.facebook.com/events/376475979684832/">
+                <a href="https://shop.eventix.io/6d2801f0-c5b4-11e9-a734-5726148946d0/tickets">
                     <img src="https://scontent-hkg3-2.cdninstagram.com/vp/4cdcddfa10ef56430fc2f9b6aa4db28d/5E12D30A/t51.2885-15/e35/69032287_2491395710940649_2848921925020992467_n.jpg?_nc_ht=scontent-hkg3-2.cdninstagram.com" />
-                    <!-- <button class="button-primary">Get tickets</button> -->
+                    <button class="button-primary">Get tickets</button>
                 </a>
             </div>
             <iframe style ="border: 2px solid #000" src="https://open.spotify.com/embed/playlist/69EbutviEzTEgBkwVtOUxO" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
