--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <!-- Begin content -->   
         <div class="container">
             <div class="feature">
-                <a href="https://shop.eventix.io/66a47670-c3fb-11e9-8ab4-cdbf30b9ea01/tickets">
-                    <img src="https://scontent-hkg3-2.cdninstagram.com/vp/4cdcddfa10ef56430fc2f9b6aa4db28d/5E12D30A/t51.2885-15/e35/69032287_2491395710940649_2848921925020992467_n.jpg?_nc_ht=scontent-hkg3-2.cdninstagram.com" />
+                <a href="https://thewalllivehouse.kktix.cc/events/moonchild">
+                    <img src="https://instagram.fhkg4-1.fna.fbcdn.net/v/t51.2885-15/e35/87242382_2640402872721944_1058315798126474094_n.jpg?_nc_ht=instagram.fhkg4-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=IwhDUxql20sAX9FeauD&oh=e09fcb1e57783f005a1a8bd27a844d3d&oe=5EA749B8" />
                     <button class="button-primary">Get tickets</button>
                 </a>
             </div>
