主辦單位取消公告

--- a/index.html
+++ b/index.html
@@ -33,14 +33,35 @@
 
         <!-- Begin content -->   
         <div class="container">
-            <div class="feature">
+            <div class="callout">
+            <p>主辦單位取消公告</p>
+
+ 
+
+<p>因考慮到新型冠狀病毒肺炎疫情，原定於2020年5月20日在台北The Wall舉行的《Moonchild台北站》將會取消。</p>
+
+<p>我們會盡快公佈有關退款的安排。如果你有任何疑問，可以通過電郵info@gluestickent.com跟我們連繫，我們會盡快回覆大家的問題。</p>
+
+<p>Gluestick在此對給歌迷們帶來不便深表歉意，並感謝大家的體諒與支持。希望疫情過後，我們很快能夠回到台灣跟大家見面！</p>
+
+ 
+
+<p>Due to the development of the Coronavirus (COVID-19) pandemic, we at Gluestick regret to announce that Gluestick x Chuchu presents: MOONCHILD Live in Taipei on May 20, 2020 at The Wall is cancelled.</p>
+
+<p>All tickets will be refunded so stay tuned for more details on the process soon. If you have any questions, please don’t hesitate to reach out to us at info@gluestickent.com and we will make sure to reply to you in a timely manner.</p>
+
+<p>We sincerely apologize for any inconvenience caused and are grateful for your continued patience and support. In the meantime, stay safe and healthy and expect us to be back with new shows soon!</p>
+
+<p>2020.04.24</p>
+</div>
+            <!-- <div class="feature">
                 <a href="https://thewalllivehouse.kktix.cc/events/moonchild">
                     <img src="https://instagram.fhkg4-1.fna.fbcdn.net/v/t51.2885-15/e35/87242382_2640402872721944_1058315798126474094_n.jpg?_nc_ht=instagram.fhkg4-1.fna.fbcdn.net&_nc_cat=108&_nc_ohc=IwhDUxql20sAX9FeauD&oh=e09fcb1e57783f005a1a8bd27a844d3d&oe=5EA749B8" />
                     <button class="button-primary">Get tickets</button>
                 </a>
-            </div>
+            </div> -->
             <iframe style ="border: 2px solid #000" src="https://open.spotify.com/embed/playlist/69EbutviEzTEgBkwVtOUxO" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>       
+        </div> 
     </div>
     <!-- End content -->
 
